			   XPCE ChangeLog
			   ==============

* FIXED: tracepce/1 on Prolog-defined get-methods that fail (crashed).

* FIXED: Properly deal with := in variable initialisations if the value is
  shareable, but converted to a non-shareable value due to the variable
  type.  Anjo Anjewierden.

* ADDED: `date<-xml_string' and extended `date<-convert' to deal with XML
  Schema dateTime representation.

* ENHANCED: PceDraw: somewhat more tolerance in the setting-menu handling.

* FIXED: PceDraw to properly cancel pending operations (notably creating a
  path).

* ADDED: library(password_item) to allow entering passwords through the GUI.


VERSION 6.2.0, distributed with SWI-Prolog 5.2.0
================================================
		
* ADDED: `view->background' and `editor->background' to set the background
  of the text_image

* FIXED: Bug #53: Restarting the Prolog Navigator (Holger Kanwischer).


VERSION 6.1.13, distributed with SWI-Prolog 5.1.13
==================================================

* PORT: Fixed many GCC 3.3 signed/unsigned warnings.


VERSION 6.1.12, distributed with SWI-Prolog 5.1.12
==================================================

* ADDED: library(splash_screen) to provide nice startup screens.

* ADDED/FIXED: Allow a frame to delete its only window (frame->delete).
  Added code to library(tabbed) window to disconnect a window from its
  frame before adding to the tab.  Steve Moyle.

* FIXED: Poor hash-performance hashing a sequence of integers.  Anjo
  Anjewierden

* FIXED: Various minor problems in barchart/plotter.

* FIXED: Generating PostScript from bitmaps filled with ->draw_in
  (X11 version).

* FIXED: Generating PostScript from boxes with negative dimension.

* FIXED: bar->compute can fail.

* FIXED: Prolog navigator loading wrong Prolog module.  Fabien Todescato.


VERSION 6.1.11, distributed with SWI-Prolog 5.1.11
==================================================
